# arsw

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  Makefile  README.rst  pyproject.toml  setup.py  temp.py  testzip.py
.cargo/: config.toml
.github/workflows/: rust-ci.yml
apsw/: __init__.pyi  ext.py  fts5query.py  shell.py
crates/arsw/: Cargo.toml  cbindgen.toml
crates/arsw-py/: Cargo.toml
crates/arsw-py/src/: backup.rs  blob.rs  connection.rs  cursor.rs  errors.rs  exceptions.rs  faultinject.rs  fts.rs  jsonb.rs  lib.rs  session.rs  traceback.rs  util.rs  vfs.rs  vtable.rs
crates/arsw-sqlite-ffi/: Cargo.toml  build.rs
crates/arsw-sqlite-ffi/src/: ffi.rs  lib.rs  raw.rs
crates/arsw-unicode-py/: Cargo.toml
crates/arsw-unicode-py/src/: lib.rs
crates/arsw/examples/: async.rs  fts.rs  json.rs  session.rs  tour.rs
crates/arsw/src/: capi.rs  lib.rs
crates/arsw/tests/: fts.rs  json.rs  session.rs  tour.rs
doc/rust-migration/: behavior-contract.json  compile-options.json  generated-artifacts.md  public-surface.json
src/: apswtypes.py
tools/: fi.py  gendocstrings.py  names.py  rust_fault_injection_smoke.py  rust_migration_phase0.py  unicode_parity_check.py
