[workspace]
members = ["crates/arsw", "crates/arsw-sqlite-ffi", "crates/arsw-py", "crates/arsw-unicode-py"]
resolver = "2"

[workspace.lints]

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
future-incompatible = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

allow_attributes = "warn"
indexing_slicing = "warn"
inline_always = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unwrap_used = "warn"

[profile.release]
overflow-checks = true
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[profile.slop]
inherits = "release"
strip = false
debug = true
