[project]
name = "apsw"
requires-python = ">=3.10"
dynamic = ["version", "urls", "classifiers", "keywords", "authors", "license", "readme", "description"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
apsw = "apsw.__main__:main"

[tool.ruff]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.cibuildwheel]
archs = ["auto64", "auto32"]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "build>=1.4.0",
    "coverage>=7.13.4",
    "mypy>=1.19.1",
    "pdbp>=1.8.2",
    "ruff>=0.15.2",
    "setuptools>=82.0.0",
    "trio>=0.33.0",
    "wheel>=0.46.3",
]
